# rules_kotlin

./: .bazelrc  .gitignore  BTAPI_2.2_IC_API.md  BTAPI_COMPARISON.md  BTAPI_NEXT_STEPS.md  BUILD  CONTRIBUTING.md  IC_IMPLEMENTATION_PLAN.md  IC_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KSP2.md  MODULE.bazel  MODULE.release.bazel  kotlin_rules_maven_install.json  rules_kotlin_maven_install.json
dev/: BUILD.bazel
docs/: compiler_version_reporting.md  kotlin.md
examples/: BUILD.bazel  example_infos.bzl  integration.bzl  shared_do_test  test_runner.sh
examples/android/: MODULE.bazel  WORKSPACE  maven_install.json
examples/anvil/: MODULE.bazel  WORKSPACE  maven_install.json
examples/associates/: MODULE.bazel  WORKSPACE  maven_install.json
examples/btapi_compat/: BUILD.bazel
examples/dagger/: MODULE.bazel  WORKSPACE  maven_install.json
examples/jetpack_compose/: MODULE.bazel
examples/ksp/: BUILD  MODULE.bazel  WORKSPACE  maven_install.json
examples/multiplex/: .bazelrc  MODULE.bazel  WORKSPACE  maven_install.json
examples/no_stdlib/: BUILD  ExplicitStdlib.kt  README.md  WithStdlib.kt
examples/plugin/: MODULE.bazel  WORKSPACE  do_test
examples/plugin/bzl/: BUILD.bazel
examples/plugin/src/serialization/: BUILD  SerializationTest.kt
examples/trivial/: .bazelrc  MODULE.bazel  WORKSPACE  maven_install.json
kotlin/: BUILD  repositories.bzl
kotlin/compiler/: BUILD  BUILD.bazel  BUILD.release.bazel  compiler.bzl  compiler_deps.bzl  kapt.bzl  ksp.bzl
kotlin/internal/: BUILD  toolchains.bzl
kotlin/internal/jvm/: BUILD  compile.bzl  impl.bzl  jvm.bzl  jvm_deps.bzl
kotlin/internal/lint/: BUILD.bazel
kotlin/internal/utils/: BUILD  utils.bzl
kotlin/settings/: BUILD.bazel
scripts/: release.sh
src/main/kotlin/: BUILD  BUILD.release.bazel  bootstrap.bzl
src/main/kotlin/io/bazel/kotlin/builder/: BUILD
src/main/kotlin/io/bazel/kotlin/builder/cmd/: BUILD.bazel  Build.kt
src/main/kotlin/io/bazel/kotlin/builder/tasks/: BUILD.bazel  KotlinBuilder.kt
src/main/kotlin/io/bazel/kotlin/builder/tasks/jvm/: BtapiCompilationTask.kt  BtapiCompiler.kt  CompilationTask.kt  InternalCompilerPlugins.kt  JavaCompiler.kt  KotlinJvmTaskExecutor.kt  Ksp2Task.kt  compilation_task.kt
src/main/kotlin/io/bazel/kotlin/builder/toolchain/: BUILD.bazel  BtapiToolchainFactory.kt  CompilationTaskContext.kt  KotlinToolchain.kt
src/main/kotlin/io/bazel/kotlin/builder/utils/: BUILD.bazel
src/main/kotlin/io/bazel/kotlin/builder/utils/jars/: BUILD.bazel
src/main/kotlin/io/bazel/kotlin/compiler/: BUILD.bazel  BazelCLICompiler.kt  BazelK2JVMCompiler.kt  BuildToolsAPICompiler.kt
src/main/kotlin/io/bazel/kotlin/generate/: BUILD.bazel
src/main/kotlin/io/bazel/kotlin/ksp2/: BUILD.bazel  Ksp2Invoker.kt
src/main/kotlin/io/bazel/kotlin/plugin/: BUILD.bazel
src/main/kotlin/io/bazel/kotlin/plugin/jdeps/: BUILD.bazel  BaseJdepsGenExtension.kt
src/main/kotlin/io/bazel/kotlin/plugin/jdeps/k2/checker/declaration/: FileChecker.kt
src/main/kotlin/io/bazel/kotlin/plugin/jdeps/k2/checker/expression/: QualifiedAccessChecker.kt
src/main/kotlin/io/bazel/kotlin/test/: BUILD.bazel  BazelIntegrationTestRunner.kt
src/main/kotlin/io/bazel/worker/: BUILD.bazel
src/main/protobuf/: BUILD  kotlin_model.proto
src/main/starlark/: BUILD.bazel
src/main/starlark/core/: BUILD.bazel
src/main/starlark/core/compile/: BUILD.bazel  common.bzl
src/main/starlark/core/compile/cli/: BUILD.bazel  BUILD.release.bazel  compile.bzl
src/main/starlark/core/options/: BUILD.bazel  opts.kotlinc.bzl
src/main/starlark/core/plugin/: BUILD.bazel  common.bzl  providers.bzl
src/main/starlark/core/repositories/: BUILD  BUILD.kotlin_capabilities.bazel  compiler.bzl  initialize.bzl  initialize.release.bzl  kotlin_repo_build.bzl.tpl  ksp.bzl  setup.bzl  versions.bzl
src/main/starlark/core/repositories/kotlin/: BUILD  artifacts.bzl
src/main/starlark/release_archive/: BUILD.bazel
src/test/data/jvm/basic/: BUILD
src/test/data/jvm/kotlin_2_2_compat/: BUILD  BasicLib.kt  BasicTest.kt
src/test/data/jvm/ksp/: BUILD  CoffeeAppServiceUsage.kt
src/test/data/jvm/ksp/bytecodegenerator/processor/src/main/com/example/: BUILD.bazel
src/test/integration/jni_runtime_deps/: BUILD.bazel  NativeGreeter.kt  native_greeter.cc
src/test/integration/non_java_runtime_deps/: BUILD.bazel  Main.kt  helper.sh
src/test/kotlin/io/bazel/generate/: BUILD.bazel  WriteKotlincCapabilitiesTest.kt
src/test/kotlin/io/bazel/kotlin/: KotlinJvmKspAssertionTest.kt  defs.bzl
src/test/kotlin/io/bazel/kotlin/builder/: BUILD  JdepsMergerTestComponent.java  KotlinAbstractTestBuilder.java  KotlinBuilderTestComponent.java  KotlinJvmTestBuilder.java
src/test/kotlin/io/bazel/kotlin/builder/tasks/: BUILD.bazel  KotlinBuilderProtoArgsTest.kt  Ksp2TaskMemoryLeakReproducerTest.kt  PluginsPayloadParserTest.kt
src/test/kotlin/io/bazel/kotlin/builder/tasks/jvm/: IncrementalCompilationTest.kt  KotlinBuilderJvmBasicTest.java  KotlinBuilderJvmJdepsSingleTest.kt  KotlinBuilderJvmStrictDepsTest.kt  PassthroughFlagsTest.java
src/test/kotlin/io/bazel/kotlin/compiler/: BUILD  BuildToolsAPICompilerTest.java
src/test/starlark/compile/: rule_tests.bzl
src/test/starlark/core/plugin/: test.bzl
src/test/starlark/internal/jvm/: BUILD.bazel  jvm_deps_tests.bzl  resource_strip_prefix_test.bzl
