load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "starlark",
    srcs = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/starlark/core",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//:__subpackages__"],
)
