load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "core",
    srcs = glob(["*.bzl"]),
    visibility = ["//:__subpackages__"],
    deps = [
        "//src/main/starlark/core/compile",
        "//src/main/starlark/core/plugin",
        "//src/main/starlark/core/repositories",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//:__subpackages__"],
)
