load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

toolchain_type(
    name = "toolchain_type",
    visibility = [
        "//visibility:public",
    ],
)

bzl_library(
    name = "compile",
    srcs = [
        "common.bzl",
    ],
    visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//:__subpackages__"],
)
