load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//src/main/starlark/release:packager.bzl", "release_archive")

release_archive(
    name = "pkg",
    srcs = glob(
        ["*.bzl"],
    ),
    src_map = {
        "BUILD.release.bazel": "BUILD.bazel",
    },
)

bzl_library(
    name = "options",
    srcs = glob(["*.bzl"]),
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_jetbrains_kotlin//:capabilities",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
