load("//src/main/kotlin:bootstrap.bzl", "kt_bootstrap_library")

kt_bootstrap_library(
    name = "jars",
    srcs = glob([
        "*.kt",
        "**/*.kt",
    ]),
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/main/protobuf:deps_java_proto",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//:__subpackages__"],
)
